--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   decimal: ^2.3.3
   image_picker: ^1.0.7
   cached_network_image: ^3.3.1
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
